      case of distributed WATO setups
    * Added oracle_tablespaces configuration to the application checkgroup
    * FIX: Fixed synchronisation of mkeventd configs in distributed WATO setups
    * FIX: "Sync & Restart" did not perform restart in distributed WATO setups
    * FIX: Fixed exception in editing code of ldap group to rule plugin

    Event Console:
    * Added UNIX socket for sending events to the EC
    * Speed up rule matches in some special cases by factor of 100 and more
    * Init-Script: Improved handling of stale pidfiles
    * Init-Script: Detecting and reporting already running processes
    * WATO: Added hook to make the mkeventd reload in distributed WATO setups
      during "activate changes" process
    * Added hook mkeventd-activate-changes to add custom actions to the mkeventd
      "activate changes" GUI function

1.2.1i5:
    Core:
    * Improved handling of CTRL+C (SIGINT) to terminate long runnining tasks 
      (e.g.  inventory of SNMP hosts)
    * FIX: PING services on clusters are treated like the host check of clusters
    * cmk --notify: new environment variable NOTIFY_WHAT which has HOST or SERVICE as value
    * cmk --notify: removing service related envvars in case of host notifications
    * cmk --notify: added test code to help developing nitofication plugins.
      Can be called with "cmk --notify fake-service debug" for example

    Checks & Agents:
    * Linux Agent, diskstat: Now supporting /dev/emcpower* devices (Thanks to Claas Rockmann-Buchterkirche)
    * FIX: winperf_processor: Showing 0% on "cmk -nv" now instead of 100%
    * FIX: win_dhcp_pools: removed faulty output on non-german windows 2003 servers 
           with no dhcp server installed (Thanks to Mathias Decker)
    * Add: fileinfo is now supported by the solaris agent. Thanks to Daniel Roettgermann
    * Logwatch: unknown eventlog level ('u') from windows agent treated as warning
    * FIX: logwatch_ec: Added state undefined as priority