@@ -62,6 +62,7 @@
     * FIX: Fixed synchronisation of mkeventd configs in distributed WATO setups
     * FIX: "Sync & Restart" did not perform restart in distributed WATO setups
     * FIX: Fixed exception in editing code of ldap group to rule plugin
+    * FIX: Don't execute ldap sync while performing actions on users page
 
     Event Console:
     * Added UNIX socket for sending events to the EC
